language/tests/error/InvalidAssignmentInBlock.sl
def double(x) {
  return 2 * x;
}

def main() {
  double(2) = 4;
}
